--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html><head>
     <title>Untitled</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +9,27 @@
   </head>
 
   <body>
+  <header class="header">
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">Untitled</a></h1>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "logout", destroy_user_session_path, method: :delete %>
+            <%= link_to "post", new_tweet_path, class: "post" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "login", new_user_session_path, class: "post" %>
+            <%= link_to "register", new_user_registration_path, class: "post" %>
+          </div>
+        <% end %>
+      </div>
+    </header>
     <%= yield %>
+     <footer>
+      <p>
+        Copyright Untitled 2020.
+      </p>
+    </footer>
   </body>
 </html>
